# tree-sitter-mako

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-mako.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_mako/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterMako/: mako.h
bindings/swift/TreeSitterMakoTests/: TreeSitterMakoTests.swift
queries/: highlights.scm  highlights.scm.bak  injections.scm  injections.scm_bak
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: call_block.txt  comment.txt  def_block.txt  doc_block.txt  general_block.txt  html-root.txt  include.txt  injected_html.txt  newline-filter.txt  page_block.txt  percent_lines.txt  python-block.txt  python_expression.txt  text_block.txt  user_block.txt
